--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 		<div class="wrapper">
 		<div class="center1">
 		<h1>Welcome To DevCANS</h1>
-        <h2> Let's Create Something New</h2><br><br>
+        <h2> Let's create Something New</h2><br><br>
         <p style="text-align: center;color: red;"><b>ABOUT US</b></p><br>
         
         <p style="color: azure;text-align: center;">This club aims to promote and foster coding skills as well as a healthy competitive environment at the institute by providing adequate resources. It will help members in developing an aptitude for logical thinking and visualizing a problem from various perspectives and creating multiple innovative solutions.</p>
