--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
     </div>
 		<div class="wrapper">
 		<div class="center1">
-		<h1>Welcome To DevCANS</h1>
+		<h1>Welcome to DevCANS</h1>
         <h2> Let's create Something New</h2><br><br>
         <p style="text-align: center;color: red;"><b>ABOUT US</b></p><br>
         
