--- a/Index.html
+++ b/Index.html
@@ -1,20 +1,99 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>Index</title>
-	<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Todo_List</title>
 </head>
+
 <body>
-			<div class="form-container1">
-			<h1><p style=" color:aqua">DevCans</p></h1>
-			<h3><p style=" color:aqua">Let's do something New</h3>
-			<h4 style="color:aqua">To faster coding and devlpment skills as well healthy coding Enviroment</h4>
-			</div>
-		<div class="buttons">
-			<center>
-			<button><a style="text-decoration: none;" href="signup.html">Sign up</a></button>
-			<button class="btn2"><a style="text-decoration: none;" href="login.html">Sign in</a></button>
-			</center>
-		</div>
+    <div id="todo">
+        <form id="todo-form">
+            <input type="text" name="todo-input" placeholder="Enter text">
+            <button type="submit">Submit</button>
+        </form>
+        <div id="todo-list">
+
+        </div>
+    </div>
+    <script>
+        let todoList = [];
+        function generateTodoItem(itemName) {
+            const timestamp = Date.now()
+            return {
+                id: 'todo-item-' + timestamp,
+                name: itemName,
+                timestamp,
+                isDone: false
+            }
+        }
+        function todoElement(item) {
+            const elem = document.createElement("li")
+            elem.id = item.id
+            elem.innerHTML = `
+        <input type="checkbox" onchange="markItem(event)" ${item.isDone ? 'checked' : ''}/>
+        <span>${item.name}</span>
+        <button onclick="deleteItem(event)">
+            Delete Item
+        </button>`
+            return elem
+        }
+        function renderList() {
+            const listElement = document.getElementById('todo-list')
+
+            listElement.innerHTML = ''
+
+            for (let i = 0; i < todoList.length; i++) {
+                const todoItem = todoElement(todoList[i])
+                listElement.appendChild(todoItem)
+            }
+        }
+        document.getElementById('todo-form').addEventListener('submit', function (event) {
+            event.preventDefault()
+            const itemName = event.target['todo-input'].value
+            if (itemName) {
+                todoList.push(generateTodoItem(itemName))
+                renderList()
+                event.target.reset()
+            }
+        })
+        function markItem(event) {
+            const itemId = event.target.parentElement.id
+            todoList.some(function (todoItem) {
+                if (todoItem.id === itemId) {
+                    todoItem.isDone = !todoItem.isDone
+                    renderList()
+                    return true
+                }
+            })
+        }
+
+        function deleteItem(event) {
+            const itemId = event.target.parentElement.id
+            todoList.some(function (todoItem, i) {
+                if (todoItem.id === itemId) {
+                    todoList.splice(i, 1);
+                    renderList()
+                    return true
+                }
+            })
+        }
+        function saveTodo(e) {
+            e.preventDefault()
+            localStorage.setItem('todoList', JSON.stringify(todoList))
+        }
+        let todoList = []
+        try {
+            if (localStorage.getItem('todoList')) {
+                todoList = JSON.parse(localStorage.getItem('todoList'))
+                renderList()
+            }
+        } catch (e) {
+            console.log(e)
+        }
+    </script>
 </body>
+
 </html>
