--- a/home.html
+++ b/home.html
@@ -3,23 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home git Practice</title>
-    <link rel="stylesheet" type="text/css" href="style1.css">
+    <title>Practice</title>
+    
+    <!--<script src="practice_JS.js"></script>-->
 </head>
 <body>
-	<div class="menu-bar">
-    <ul>
-       <li><a href="home.html"><h3>Home</h3></a></li>
-       <li><a href="leaderboard.html"><h3>Leaderboard</h3></a></li>
-       <li><a href="doubt.html"><h3>Doubt </h3></a></li>
-    </ul>
-    </div>
-		<div class="wrapper">
-		<div class="center1">
-		<h1>Welcome to DevCANS</h1>
-        <h2> Let's create Something New</h2><br><br>
-        <p style="text-align: center;color: red;"><b>ABOUT US</b></p><br>
-        </div>
-        </div>
+	<h1>JS Tutorial</h1>
+    <script>
+        console.log("Good");
+    </script>
 </body>
 </html>
